// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Circle Default 1`] = `
<div
  className="  "
  mode="normal"
>
  <span>
    121
  </span>
</div>
`;

exports[`Storyshots Slider Default 1`] = `
<div
  className=" "
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="  "
    mode="normal"
  >
    <span>
      120
    </span>
  </div>
  <div
    className="   "
    style={
      Object {
        "clipPath": "polygon(0% 100%, 100% 100%, 100% 60%, 0% 60%)",
        "display": "none",
      }
    }
  >
    <span>
      120
    </span>
  </div>
</div>
`;

exports[`Storyshots Slider Validation Float 1`] = `
<div
  className=" "
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="  "
    mode="normal"
  >
    <span>
      120
    </span>
  </div>
  <div
    className="   "
    style={
      Object {
        "clipPath": "polygon(0% 100%, 100% 100%, 100% 60%, 0% 60%)",
        "display": "none",
      }
    }
  >
    <span>
      120
    </span>
  </div>
</div>
`;

exports[`Storyshots Slider Validation Invert 1`] = `
<div
  className=" "
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="  "
    mode="normal"
  >
    <span>
      120
    </span>
  </div>
  <div
    className="   "
    style={
      Object {
        "clipPath": "polygon(0% 100%, 100% 100%, 100% 60%, 0% 60%)",
        "display": "none",
      }
    }
  >
    <span>
      120
    </span>
  </div>
</div>
`;

exports[`Storyshots Slider Validation Negative 1`] = `
<div
  className=" "
  onMouseDown={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
>
  <div
    className="  "
    mode="normal"
  >
    <span>
      120
    </span>
  </div>
  <div
    className="   "
    style={
      Object {
        "clipPath": "polygon(0% 100%, 100% 100%, 100% 60%, 0% 60%)",
        "display": "none",
      }
    }
  >
    <span>
      120
    </span>
  </div>
</div>
`;
